Fix the majority of responsiveness issues on mobile

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,5 +1,5 @@
 .header {
-    width: 100%;
+    width: 100vw;
     position: relative;
     z-index: 10;
 }
@@ -24,6 +24,7 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    height: 55px;
 }
 
 a {
