--- a/src/components/header/HeaderNavItem.css
+++ b/src/components/header/HeaderNavItem.css
@@ -6,7 +6,7 @@
     justify-content: center;
     color: white;
     font-size: larger;
-    padding: 0 50px;
+    padding: 0 25px;
 }
 
 .menu-item:hover {
