--- a/src/components/landing/Landing.css
+++ b/src/components/landing/Landing.css
@@ -44,14 +44,37 @@
 
 
 .landing-section__content {
-    /*margin: 60px 300px;*/
-    /*flex: 1;*/
+    padding: 50px 10px;
+    width: 1270px;
+    max-width: 100%;
+    margin: 0 auto;
 }
 
-.landing-section-contact {
+.footer-section {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
+    column-gap: 50px;
 }
+
+.footer-section__networks {
+    flex-grow: 2;
+    flex-basis: 60%;
+}
+
+.footer-section__photo {
+    flex-grow: 1;
+}
+
+.footer-section__photo--img {
+    display: block;
+    margin: 0 auto;
+    border-radius: 50%;
+    width: 350px;
+    max-width: 100%;
+    height: auto;
+}
+
 
 .contact-link {
     color: var(--primary-color);
@@ -65,21 +88,10 @@
     color: white;
 }
 
-.landing-section-contact__photo {
-    width: 50%;
-}
-
-.landing-section-contact__photo--img {
-    display: block;
-    margin: 0 auto;
-    border-radius: 50%;
-    width: 350px;
-    max-width: 100%;
-    height: auto;
-}
-
 .table-technology {
     max-width: 100%;
+    display: block;
+    overflow-x: auto;
     border-collapse: collapse;
     font-size: larger;
     margin: 0 auto;
@@ -126,4 +138,8 @@
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+}
+
+.chart-results__img {
+    max-width: 100%;
 }
