--- a/src/components/landing/landing-section/LandingSection.css
+++ b/src/components/landing/landing-section/LandingSection.css
@@ -1,7 +1,7 @@
 .landing-section {
     /*padding: 60px 300px;*/
     /*box-sizing: border-box;*/
-    padding: 50px 300px;
+
 }
 
 .landing-section--color-primary {
